--- a/www/templates/dashboard.html
+++ b/www/templates/dashboard.html
@@ -1,9 +1,1 @@
-<ion-view view-title="Dashboard">
-  <ion-content>
-    <img class="padding" src="img/global.png" />
-      <ion-search class="" message="Where do you want to go?" placeholder="Search a user" min-length="1" model="users" source="getUsersByName(str)"></ion-search>
-      <div class="padding">
-        <a class="button button-block button-positive" href="#/main/directory">Browse Directory</a>
-      </div>
-  </ion-content>
-</ion-view>
+<ion-nav-view name="dashboard-view"></ion-nav-view>
