--- a/www/templates/department.html
+++ b/www/templates/department.html
@@ -1,6 +1,6 @@
 <ion-view view-title="cnnxt-mobile" id="department-view">
   <ion-content>
-    <img class="padding" src="img/global.png" />
+    <img class="padding-header" src="img/global.png" />
     <div class="container">
       <div class="list">
         <a class="item item-thumbnail-right" href="#">
