--- a/www/templates/directions.html
+++ b/www/templates/directions.html
@@ -1,6 +1,6 @@
 <ion-view view-title="">
   <ion-content class="padding">
-    <img class="padding" src="img/global.png" />
+    <img class="padding-header" src="img/global.png" />
     <!-- <div class="padding"> -->
       <div class="map-container padding">
         <div id="map" data-tap-disabled="true"></div>
