--- a/www/templates/directory.html
+++ b/www/templates/directory.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Directory">
   <ion-content>
-    <img class="padding-left" src="img/global.png" />
+    <img class="padding-header" src="img/global.png" />
     <a class="button button-block button-stable" ng-repeat="chat in chats" href="#/tab/chats/{{chat.id}}">
       {{ chat.name }}
     </a>
