--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,9 +1,9 @@
-<ion-view view-title="Dashboard">
+<ion-view view-title="Dashboard" id="home-view">
   <ion-content>
-    <img class="padding" src="img/global.png" />
+    <img class="padding-header" src="img/global.png" />
     <ion-search class="search-input" message="Where do you want to go?" min-length="1" model="destinations" source="getDepartmentByString(str)"></ion-search>
     <ion-search class="search-input inverse" ng-show="destination !== ''" message="Where are you starting?" min-length="1" model="origins" source="getDepartmentByString(str)"></ion-search>
-    <a class="button button-block button-assertive" ng-hide="destination !== '' || origin !== ''" href="#/dashboard/departments">Browse Directory</a>
-    <a class="button button-energized" ng-show="destination !== '' && origin !== ''" href="#/dashboard/directions">Get Directions</a>
+    <a class="margin-button button button-block button-assertive" ng-hide="destination !== '' || origin !== ''" href="#/dashboard/departments">Browse Directory</a>
+    <a class="button button-energized margin-button" ng-show="destination !== '' && origin !== ''" href="#/dashboard/directions">Get Directions</a>
   </ion-content>
 </ion-view>
