--- a/scss/home.scss
+++ b/scss/home.scss
@@ -2,4 +2,12 @@
 	.button-block {
 		margin-top: 50px;
 	}
+
+	.row {
+		a {
+			margin-top: 30px;
+			width: 100%;
+			padding: 10px 15px;
+		}
+	}
 }
