--- a/www/templates/departments.html
+++ b/www/templates/departments.html
@@ -1,9 +1,9 @@
 <ion-view view-title="" id="departments-view">
   <ion-content>
     <img class="padding-header" src="img/global.png" />
-    <div class="departments-list margin-list" ng-repeat="department in departments">
-      <button class="button button-block button-{{department.color}}" ng-click="toggleGroup(department)" ng-class="{active: isGroupShown(department)}">
-        {{ department.name }}
+    <div class="departments-list margin-list" ng-repeat="category in categories">
+      <button class="button button-block button-{{colors[$index]}}" ng-click="toggleGroup(category)" ng-class="{active: isGroupShown(category)}">
+        {{ category.name }}
       </button>
       <ion-list>
         <ion-item class="item-accordion positive-light" ng-repeat="subcategories in department.categories" ng-show="isGroupShown(department)">
