--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,24 +1,37 @@
 <ion-view view-title="Dashboard" id="home-view">
   <ion-content>
     <img class="padding-header" src="img/global.png" />
-    <!-- <ion-search class="search-input" message="Where do you want to go?" min-length="1" model="destinations" source="getDepartmentByString(str)"></ion-search> -->
-    <!-- <ion-search class="search-input inverse" ng-show="destination !== ''" message="Where are you starting?" min-length="1" model="origins" source="getDepartmentByString(str)"></ion-search> -->
     <div class="search-input list list-inset">
       <h4>{{ destinationMessage }}</h4>
       <label class="item item-input">
         <i class="icon ion-search placeholder-icon"></i>
-        <input type="search">
+        <input type="search" ng-model="destination" ng-change="findDestination(destination)" ng-focus="focus()">
       </label>
+      <div class="list" ng-show="destination1 === ''">
+        <div ng-repeat="category in categoriesFiltered">
+          <a class="item item-icon-right">
+            {{ category.name }}
+            <i class="icon ion-chevron-down"></i>
+          </a>
+        </div>
+      </div>
     </div>
-    <div class="search-input inverse list list-inset">
+    <div class="search-input inverse list list-inset" ng-show="destination1 !== ''">
       <h4>{{ originMessage }}</h4>
       <label class="item item-input">
         <i class="icon ion-search placeholder-icon"></i>
-        <input type="search">
+        <input type="search" ng-model="origin">
       </label>
+      <div class="list">
+        <div ng-repeat="category in categories">
+          <a class="item item-icon-right">
+            {{ category.name }}
+            <i class="icon ion-chevron-down"></i>
+          </a>
+        </div>
+      </div>
     </div>
     <a class="margin-button button button-block button-assertive" ng-hide="destination !== '' || origin !== ''" href="#/dashboard/departments">Browse Directory</a>
-
     <div class="row">
 		  <div class="col col-50 col-offset-25">
 		  	<a class="button button-energized" ng-show="destination !== '' && origin !== ''" href="#/dashboard/directions1">Get Directions</a>
