--- a/www/templates/directions/direction.html
+++ b/www/templates/directions/direction.html
@@ -2,8 +2,8 @@
   <ion-content>
     <img class="padding-header" src="img/global.png" ng-click="goToMain()"/>
     <div class="container">
-      <!-- <vg-map vg-destination="destination" vg-origin="origin" vg-controls="true"></vg-map> -->
-      <vg-map vg-direction="destination"></vg-map>
+      <vg-map vg-direction="destination.hotspot_map"></vg-map>
+      <h4>{{ destination.name }}</h4>
     </div>
   </ion-content>
 </ion-view>
