--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7704,7 +7704,7 @@ a.button {
 
 #map-container {
   width: 100%;
-  height: 250px;
+  height: calc(100vh - 149px);
   background: #E99D40; }
   #map-container .map-directions {
     position: absolute;
@@ -7724,6 +7724,9 @@ a.button {
     #map-container .map-directions button:last-child {
       right: 11px;
       left: auto; }
+
+.view-container {
+  top: 0; }
 
 .padding-header {
   padding: 15px 30px; }
