--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,18 +1,18 @@
 <ion-view view-title="Dashboard" id="home-view">
   <ion-content>
-    <img class="padding-header" src="img/global.png" ng-click="goToTest()"/>
+    <img class="padding-header" src="img/global.png"/>
     <div>
       <div class="search-input list list-inset">
         <h4>{{ destinationMessage }}</h4>
-        <label class="item item-input" ng-show="destination1 !== ''">
-          <input type="text" value="{{ destination1 }}">
+        <label class="item item-input" ng-show="destination">
+          <input type="text" value="{{ destination.name }}">
         </label>
-        <label class="item item-input" ng-show="destination1 === ''">
+        <label class="item item-input" ng-show="!destination">
           <i class="icon ion-search placeholder-icon"></i>
           <input type="search" ng-model="model.destinationName" ng-change="findDestination(model.destinationName)" ng-focus="focus('destination', model.destinationName)">
         </label>
       </div>
-      <div class="categories list" ng-show="destination1 === ''">
+      <div class="categories list" ng-show="!destination">
         <div ng-repeat="category in categoriesFiltered" ng-init="isClosed=true" ng-click="isClosed=!isClosed; getDepartments(category)">
           <a class="item item-icon-right">
             {{ category.name }}
@@ -26,13 +26,13 @@
         </div>
       </div>
     </div>
-    <div ng-show="destination1 !== ''">
+    <div ng-show="destination">
       <div class="search-input inverse list list-inset">
         <h4>{{ originMessage }}</h4>
-        <label class="item item-input" ng-show="origin1 !== ''">
-          <input type="text" value="{{ origin1 }}">
+        <label class="item item-input" ng-show="origin">
+          <input type="text" value="{{ origin.name }}">
         </label>
-        <label class="item item-input" ng-show="origin1 === ''">
+        <label class="item item-input" ng-show="!origin">
           <i class="icon ion-search placeholder-icon"></i>
           <input type="search" ng-model="model.originName" ng-change="findOrigin(model.originName)" ng-focus="focus('origin', model.originName)">
         </label>
@@ -51,10 +51,10 @@
         </div>
       </div>
     </div>
-    <a class="margin-button button button-block button-assertive" ng-hide="destination1 !== '' || origin1 !== ''" href="#/dashboard/departments">Browse Directory</a>
+    <a class="margin-button button button-block button-assertive" ng-hide="destination || origin" ng-click="showDirectory()">Browse Directory</a>
     <div class="row">
 		  <div class="col col-50 col-offset-25">
-		  	<a class="button button-energized" ng-show="destination1 !== '' && origin1 !== ''" ng-click="getDirections()">Get Directions</a>
+		  	<a class="button button-energized" ng-show="destination && origin" ng-click="getDirections()">Get Directions</a>
 		  </div>
 		</div>
   </ion-content>
